--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://neohung.github.io/'
 languageCode = 'zh-TW'
-title = 'Neo Hugo Site'
+title = 'Neoo Hugo Site'
 theme = 'PaperMod'
