--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "themes/black-and-light"]
 	path = themes/black-and-light
 	url = https://github.com/davidhampgonsalves/hugo-black-and-light-theme.git
+[submodule "themes/blist"]
+	path = themes/blist
+	url = https://github.com/apvarun/blist-hugo-theme.git
