--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -27,13 +27,15 @@ jobs:
     runs-on: ubuntu-latest
     env:
       HUGO_VERSION: 0.120.4
+      DART_SASS_VERSION: 1.63.6"
     steps:
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
       - name: Install Dart Sass
-        run: sudo snap install dart-sass
+        run: curl -LJO https://github.com/sass/dart-sass/releases/download/1.63.6/dart-sass-1.63.6-linux-x64.tar.gz \
+             && tar -v -x -C ~/bin -f dart-sass-1.63.6-linux-x64.tar.gz
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -51,7 +53,8 @@ jobs:
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
         run: |
-          hugo \
+          export PATH=${PATH}:${HOME}/bin/dart-sass \
+          && hugo \
             --gc \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
