--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,9 +33,10 @@ jobs:
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+      - name: Download Dart Sass
+        run: curl -LJO https://github.com/sass/dart-sass/releases/download/1.63.6/dart-sass-1.63.6-linux-x64.tar.gz
       - name: Install Dart Sass
-        run: curl -LJO https://github.com/sass/dart-sass/releases/download/1.63.6/dart-sass-1.63.6-linux-x64.tar.gz \
-             && tar -v -x -C ~/bin -f dart-sass-1.63.6-linux-x64.tar.gz
+             tar -v -x -C ~/bin -f dart-sass-1.63.6-linux-x64.tar.gz
       - name: Checkout
         uses: actions/checkout@v4
         with:
