--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -27,14 +27,14 @@ jobs:
     runs-on: ubuntu-latest
     env:
       HUGO_VERSION: 0.120.4
-      DART_SASS_VERSION: 1.63.6"
+      DART_SASS_VERSION: 1.63.6
     steps:
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
       - name: Download Dart Sass
-        run: curl -LJO https://github.com/sass/dart-sass/releases/download/1.63.6/dart-sass-1.63.6-linux-x64.tar.gz
+        run: curl -LJO https://github.com/sass/dart-sass/releases/download/${DART_SASS_VERSION}/dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz
       - name: Install Dart Sass
         run: mkdir -p ~/bin && tar -v -x -C ~/bin -f dart-sass-1.63.6-linux-x64.tar.gz
       - name: Checkout
