--- a/config.toml
+++ b/config.toml
@@ -70,34 +70,23 @@ categories = "categories"
       enableDuckDuckGoSearchBox = true
       numberedSubtitles = true
       [languages.zh-tw.params.buymeacoffee]
-        code = """
-               <script async data-name="BMC-Widget" 
-               data-cfasync="true" 
-               src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" 
-               data-id="michaelneuper" 
-               data-description="Like what I do? Buy me a coffee!" 
-               data-message="" 
-               data-color="#d79921" 
-               data-position="Right" 
-               data-x_margin="18" 
-               data-y_margin="18"
-               crossorigin="anonymous">
-               </script>
-               """
+      code = """
+             <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="neoh" data-description="Like what I do? Buy me a coffee!" data-message="" data-color="#d79921" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+             """
       [languages.zh-tw.params.commentEngine]
         code = """
                <script src="https://giscus.app/client.js"
-               data-repo="michaelneuper/hugo-texify3"
-               data-repo-id="R_kgDOIjPNaQ"
-               data-category="General"
-               data-category-id="DIC_kwDOIjPNac4CaklA"
+               data-repo="neohung/neohung.github.io"
+               data-repo-id="R_kgDOLbygLQ"
+               data-category="Announcements"
+               data-category-id="DIC_kwDOLbygLc4Cd8So"
                data-mapping="pathname"
                data-strict="0"
                data-reactions-enabled="1"
                data-emit-metadata="0"
                data-input-position="top"
-               data-theme=""
-               data-lang="ch"
+               data-theme="preferred_color_scheme"
+               data-lang="zh-TW"
                data-loading="lazy"
                crossorigin="anonymous"
                async>
