--- a/config.toml
+++ b/config.toml
@@ -103,6 +103,7 @@ categories = "categories"
         hackernews = false
         telegram = false
 [languages.en-us]
+    title = 'Neo Blog'
     languageName = "🇺🇸"
     contentDir = "content/en-us"
     weight = 2
