--- a/config.toml
+++ b/config.toml
@@ -103,14 +103,32 @@ categories = "categories"
         hackernews = false
         telegram = false
 [languages.en-us]
-    title = 'Neo Blog'
-    languageName = "🇺🇸"
+    languageName = "US"
     contentDir = "content/en-us"
+    disabled = false
+    languageCode = 'en-us'
+    languageDirection = 'ltr'
+    title = 'Neo Blog'    
     weight = 1
-    languageCode = "en-US"
     hasCJKLanguage = false
     copyright = "[CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.en)"
-[[languages.en-us.menu.main]]
+   [languages.en-us.params]
+      title="Neo Blog"
+      description = "TeXify3 - A LaTeX-style hugo theme with the gruvbox color scheme for personal blogging"
+      footnote = """
+                 Powered by  <a class=link href=https://gohugo.io target=_blank rel=noopener>Hugo</a> | 
+                 Theme <a class=link href=https://github.com/michaelneuper/hugo-texify3 target=_blank rel=noopener>TeXify3</a>
+                 """
+      customCSS = []
+      customJS = []
+      dateFormat = "2 January 2006"
+      emphasisWithDots = true
+      toc = true
+      rootFontSize = "105%"
+      math = true
+      enableDuckDuckGoSearchBox = true
+      numberedSubtitles = true
+   [[languages.en-us.menu.main]]
       identifier = "posts"
       name = "Posts"
       url = "/en-us/posts/"
@@ -119,6 +137,39 @@ categories = "categories"
             <path d="M17,11H16a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm0,4H16a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2ZM11,9h6a1,1,0,0,0,0-2H11a1,1,0,0,0,0,2ZM21,3H7A1,1,0,0,0,6,4V7H3A1,1,0,0,0,2,8V18a3,3,0,0,0,3,3H18a4,4,0,0,0,4-4V4A1,1,0,0,0,21,3ZM6,18a1,1,0,0,1-2,0V9H6Zm14-1a2,2,0,0,1-2,2H7.82A3,3,0,0,0,8,18V5H20Zm-9-4h1a1,1,0,0,0,0-2H11a1,1,0,0,0,0,2Zm0,4h1a1,1,0,0,0,0-2H11a1,1,0,0,0,0,2Z"/></svg>
             """
       weight = 2
+[languages.en-us.params.buymeacoffee]
+      code = """
+             <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="neoh" data-description="Like what I do? Buy me a coffee!" data-message="" data-color="#d79921" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+             """
+[languages.en-us.params.commentEngine]
+        code = """
+               <script src="https://giscus.app/client.js"
+               data-repo="neohung/neohung.github.io"
+               data-repo-id="R_kgDOLbygLQ"
+               data-category="Announcements"
+               data-category-id="DIC_kwDOLbygLc4Cd8So"
+               data-mapping="pathname"
+               data-strict="0"
+               data-reactions-enabled="1"
+               data-emit-metadata="0"
+               data-input-position="top"
+               data-theme="preferred_color_scheme"
+               data-lang="zh-TW"
+               data-loading="lazy"
+               crossorigin="anonymous"
+               async>
+               </script>
+               """
+[languages.en-us.params.sharingbuttons]
+        facebook = false
+        twitter = false
+        email = false
+        linkedin = false
+        reddit = false
+        whatsapp = false
+        hackernews = false
+        telegram = false
+
     
 [outputs]
   home = ["HTML", "RSS", "JSON"]
